--- a/ui/main.ui
+++ b/ui/main.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>470</width>
-    <height>420</height>
+    <width>633</width>
+    <height>625</height>
    </rect>
   </property>
   <property name="palette">
@@ -490,7 +490,7 @@
     </sizepolicy>
    </property>
    <layout class="QGridLayout" name="gridLayout">
-    <item row="5" column="0">
+    <item row="6" column="0">
      <spacer name="verticalSpacer">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
@@ -502,6 +502,26 @@
        </size>
       </property>
      </spacer>
+    </item>
+    <item row="0" column="1">
+     <widget class="QLineEdit" name="le_distro">
+      <property name="text">
+       <string>humble</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="0" colspan="3">
+     <widget class="QPushButton" name="pb_monitor">
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>80</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>Topic Monitor</string>
+      </property>
+     </widget>
     </item>
     <item row="0" column="0">
      <widget class="QLabel" name="label">
@@ -516,15 +536,30 @@
       </property>
      </widget>
     </item>
-    <item row="0" column="1">
-     <widget class="QLineEdit" name="le_distro">
+    <item row="4" column="0" colspan="3">
+     <widget class="QPushButton" name="pb_launcher">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>80</height>
+       </size>
+      </property>
       <property name="text">
-       <string>humble</string>
+       <string>Launcher</string>
       </property>
      </widget>
     </item>
     <item row="0" column="2">
      <widget class="QToolButton" name="tb_distro">
+      <property name="minimumSize">
+       <size>
+        <width>60</width>
+        <height>0</height>
+       </size>
+      </property>
       <property name="text">
        <string>Set</string>
       </property>
@@ -535,7 +570,7 @@
       <property name="minimumSize">
        <size>
         <width>0</width>
-        <height>60</height>
+        <height>80</height>
        </size>
       </property>
       <property name="text">
@@ -548,7 +583,7 @@
       <property name="minimumSize">
        <size>
         <width>0</width>
-        <height>60</height>
+        <height>80</height>
        </size>
       </property>
       <property name="text">
@@ -556,29 +591,16 @@
       </property>
      </widget>
     </item>
-    <item row="3" column="0" colspan="3">
-     <widget class="QPushButton" name="pb_monitor">
+    <item row="5" column="0" colspan="3">
+     <widget class="QPushButton" name="pb_proc">
       <property name="minimumSize">
        <size>
         <width>0</width>
-        <height>60</height>
+        <height>80</height>
        </size>
       </property>
       <property name="text">
-       <string>Topic Monitor</string>
-      </property>
-     </widget>
-    </item>
-    <item row="4" column="0" colspan="3">
-     <widget class="QPushButton" name="pb_launcher">
-      <property name="minimumSize">
-       <size>
-        <width>0</width>
-        <height>60</height>
-       </size>
-      </property>
-      <property name="text">
-       <string>Launcher</string>
+       <string>Process List</string>
       </property>
      </widget>
     </item>
