--- a/ui/player.ui
+++ b/ui/player.ui
@@ -493,12 +493,76 @@
     <item row="0" column="1">
      <widget class="QLineEdit" name="le_bag">
       <property name="text">
-       <string>/media/yudai/ssd/rosbag2_2022_11_16-18_21_03</string>
+       <string/>
       </property>
      </widget>
     </item>
     <item row="8" column="1">
      <widget class="QPlainTextEdit" name="pte_bag">
+      <property name="palette">
+       <palette>
+        <active>
+         <colorrole role="Text">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>154</red>
+            <green>153</green>
+            <blue>150</blue>
+           </color>
+          </brush>
+         </colorrole>
+         <colorrole role="PlaceholderText">
+          <brush brushstyle="NoBrush">
+           <color alpha="128">
+            <red>154</red>
+            <green>153</green>
+            <blue>150</blue>
+           </color>
+          </brush>
+         </colorrole>
+        </active>
+        <inactive>
+         <colorrole role="Text">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>154</red>
+            <green>153</green>
+            <blue>150</blue>
+           </color>
+          </brush>
+         </colorrole>
+         <colorrole role="PlaceholderText">
+          <brush brushstyle="NoBrush">
+           <color alpha="128">
+            <red>154</red>
+            <green>153</green>
+            <blue>150</blue>
+           </color>
+          </brush>
+         </colorrole>
+        </inactive>
+        <disabled>
+         <colorrole role="Text">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>94</red>
+            <green>92</green>
+            <blue>100</blue>
+           </color>
+          </brush>
+         </colorrole>
+         <colorrole role="PlaceholderText">
+          <brush brushstyle="NoBrush">
+           <color alpha="128">
+            <red>154</red>
+            <green>153</green>
+            <blue>150</blue>
+           </color>
+          </brush>
+         </colorrole>
+        </disabled>
+       </palette>
+      </property>
       <property name="font">
        <font>
         <family>Ubuntu Mono</family>
@@ -624,6 +688,9 @@
          <property name="suffix">
           <string> s</string>
          </property>
+         <property name="maximum">
+          <number>9999</number>
+         </property>
         </widget>
        </item>
        <item row="0" column="1">
@@ -641,6 +708,9 @@
        </item>
        <item row="0" column="5" rowspan="2">
         <widget class="QPushButton" name="pb_play">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
          <property name="minimumSize">
           <size>
            <width>170</width>
